# bitable-parser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
bitable_parser/: bitable.py  parser.py
src/bitable_parser/: __init__.py  bitable.py  parser.py
typings/lark_oapi/: __init__.pyi  client.pyi
typings/lark_oapi/api/: __init__.pyi
typings/lark_oapi/api/acs/: service.pyi
typings/lark_oapi/api/admin/: service.pyi
typings/lark_oapi/api/aily/: service.pyi
typings/lark_oapi/api/apaas/: service.pyi
typings/lark_oapi/api/application/: __init__.pyi  service.pyi
typings/lark_oapi/api/approval/: service.pyi
typings/lark_oapi/api/attendance/: service.pyi
typings/lark_oapi/api/auth/: __init__.pyi  service.pyi
typings/lark_oapi/api/authen/: service.pyi
typings/lark_oapi/api/baike/: service.pyi
typings/lark_oapi/api/base/: service.pyi
typings/lark_oapi/api/bitable/: service.pyi
typings/lark_oapi/api/block/: service.pyi
typings/lark_oapi/api/board/: service.pyi
typings/lark_oapi/api/calendar/: service.pyi
typings/lark_oapi/api/cardkit/: service.pyi
typings/lark_oapi/api/compensation/: service.pyi
typings/lark_oapi/api/contact/: service.pyi
typings/lark_oapi/api/docs/: service.pyi
typings/lark_oapi/card/: __init__.pyi  action_handler.pyi  model.pyi
typings/lark_oapi/core/: __init__.pyi  const.pyi  construct.pyi  enum.pyi  env_var.pyi  exception.pyi  json.pyi  log.pyi
typings/lark_oapi/event/: context.pyi  custom.pyi  dispatcher_handler.pyi  processor.pyi
typings/lark_oapi/ws/: client.pyi  const.pyi  enum.pyi  exception.pyi  model.pyi
(+8690 files in other folders)
