[tool.poetry]
name = "bitable-parser"
version = "0.1.0"
description = ""
authors = ["Zhengyi Dong <zhengyi.dong@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark-oapi = "^1.3.6"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
thefuzz = "^0.22.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
